Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/AnnComma.out
AnnComma.java:12:36: compiler.err.illegal.start.of.expr
AnnComma.java:14:39: compiler.err.illegal.start.of.expr
2 errors
